language/move-prover/tests/sources/marketcap_as_schema.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/marketcap_as_schema.move:12:9 ───
    │
 12 │         ensures global<MarketCap>(0xA550C18).total_value == sum_of_coins<X>;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/marketcap_as_schema.move:55:6: deposit_invalid (entry)
    =     at tests/sources/marketcap_as_schema.move:56:18: deposit_invalid
    =         coin_ref = <redacted>,
    =         check = <redacted>,
    =         value = <redacted>
    =     at tests/sources/marketcap_as_schema.move:57:27: deposit_invalid
    =         coin_ref = <redacted>
    =     at tests/sources/marketcap_as_schema.move:55:6: deposit_invalid (exit)
